Calculo do erro medio dos modelos

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projeto 2 - Cdados\n",
+    "# Projeto 2 - Ciência dos dados\n",
     "\n",
-    "## Integrantes :\n",
+    "### Integrantes :\n",
+    "\n",
     "* Camila Magni \n",
     "* Gustavo Borba\n",
     "* Julia Figueiredo\n",
@@ -14,11 +15,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introdução"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importando as bibliotecas que serão utilizadas no projeto\n",
     "%matplotlib inline\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -26,9 +42,8 @@
     "from numpy import arange\n",
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
-    "\n",
-    "# Para ter melhor print\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -40,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +196,7 @@
        "4    0.323  Electronic  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,12 +214,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dados gerais do Data Frame:"
+    "### Dados gerais do Data Frame e Análise Exploratória:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +240,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +400,7 @@
        "max        3.744000      0.942000      0.992000  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +675,7 @@
        "[50005 rows x 13 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +942,7 @@
        "[50005 rows x 12 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +972,7 @@
        "Name: popularity, dtype: float64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1000,7 @@
        "Name: danceability, dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1263,7 @@
        "[29756 rows x 12 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1290,16 +1305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.35641984605872556"
+       "0.356419846058725"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1391,7 @@
        "0     0.115    -5.201       0.0748  100.889    0.759  Electronic      -0.001  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,16 +1402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.21634533525008517"
+       "0.2163453352500851"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,16 +1422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.03946830743229841"
+       "-0.0394683074322984"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,16 +1442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3179409225481482"
+       "0.3179409225481483"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,16 +1462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.22430947001638105"
+       "0.22430947001638107"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,16 +1482,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.08380905501762263"
+       "-0.08380905501762259"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,16 +1502,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12491300925803685"
+       "0.1249130092580369"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1808,7 @@
        "[100 rows x 11 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1860,13 +1875,12 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
     "sns.pairplot(dados, height=1.5);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2132,7 @@
        "[50000 rows x 12 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2130,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2178,7 +2192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2213,7 @@
        "  <th>Date:</th>             <td>Thu, 25 Nov 2021</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>14:09:51</td>     <th>  Log-Likelihood:    </th> <td>-2.0344e+05</td>\n",
+       "  <th>Time:</th>                 <td>22:05:00</td>     <th>  Log-Likelihood:    </th> <td>-2.0344e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 50000</td>      <th>  AIC:               </th>  <td>4.069e+05</td> \n",
@@ -2261,7 +2275,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.171\n",
        "Method:                 Least Squares   F-statistic:                     2058.\n",
        "Date:                Thu, 25 Nov 2021   Prob (F-statistic):               0.00\n",
-       "Time:                        14:09:51   Log-Likelihood:            -2.0344e+05\n",
+       "Time:                        22:05:00   Log-Likelihood:            -2.0344e+05\n",
        "No. Observations:               50000   AIC:                         4.069e+05\n",
        "Df Residuals:                   49994   BIC:                         4.070e+05\n",
        "Df Model:                           5                                         \n",
@@ -2289,7 +2303,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 111,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2303,12 +2317,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Modelos de Predição"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Regressão Linear"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2319,15 +2340,12 @@
     "model = LinearRegression()\n",
     "\n",
     "X = dados[['danceability', 'energy', 'liveness', 'loudness', 'duration_s']]\n",
-    "y = dados['popularity'].values.reshape(-1,1)\n",
-    "# X = dados['danceability']\n",
-    "# y = dados['popularity']\n",
-    "\n"
+    "y = dados['popularity'].values.reshape(-1,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2348,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2357,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2384,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2382,16 +2400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5883377537631165"
+       "0.5853764838317383"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2409,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2458,7 @@
        "RandomForestRegressor(n_estimators=10, random_state=0)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2453,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2480,7 @@
        "array([36.6 , 45.1 , 55.3 , ..., 48.1 , 45.2 , 38.85])"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2474,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2501,7 @@
        "0.22716219744851107"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2491,6 +2509,27 @@
    "source": [
     "from sklearn.metrics import r2_score\n",
     "r2_score(Y_test, Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "188.683519071199"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "mean_squared_error(Y_test, Y_pred)"
    ]
   },
   {
@@ -2502,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2514,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2572,7 @@
        "DecisionTreeRegressor(random_state=0)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2546,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2594,7 @@
        "array([60., 41., 40., ..., 13., 50., 47.])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2567,7 +2606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2576,7 +2615,7 @@
        "-0.3946371908975248"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2584,6 +2623,27 @@
    "source": [
     "from sklearn.metrics import r2_score\n",
     "r2_score(Y_test, Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "342.36654722222227"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "mean_squared_error(Y_test, Y_pred)"
    ]
   },
   {
@@ -2595,7 +2655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2607,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2617,7 +2677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2631,14 +2691,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gubor\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "C:\\Users\\camil\\anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:72: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  return f(**kwargs)\n"
      ]
     },
@@ -2648,7 +2708,7 @@
        "SVR()"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2662,7 +2722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2732,7 @@
        "       51.58646639, 39.14191227])"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2684,16 +2744,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.24124664040020338"
+       "0.2412466404002035"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2701,6 +2761,27 @@
    "source": [
     "from sklearn.metrics import r2_score\n",
     "r2_score(Y_test, Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "186.26476449567954"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "mean_squared_error(Y_test, Y_pred)"
    ]
   },
   {
